<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FEE4B3"
    tools:context=".view.fragment.EditLibroFrag">

    <Button
        android:id="@+id/btVolverEditLibroFrag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/schoolbell"
        android:text="@string/textVolver"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btEditLibro2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/schoolbell"
        android:text="@string/textEditar"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etTituloLibroEdit"
        app:layout_constraintBottom_toTopOf="@+id/etEditorialLibroEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:fontFamily="@font/schoolbell"
        android:hint="@string/textTitulo"
        android:inputType="textPersonName"
        android:maxLength="25"
        android:padding="12dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etEditorialLibroEdit"
        app:layout_constraintBottom_toTopOf="@+id/etPaginasLibroEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTituloLibroEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:fontFamily="@font/schoolbell"
        android:hint="@string/textEditorial"
        android:inputType="textPersonName"
        android:maxLength="25"
        android:padding="12dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etPaginasLibroEdit"
        app:layout_constraintBottom_toTopOf="@+id/etAutorLibroEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEditorialLibroEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:fontFamily="@font/schoolbell"
        android:hint="@string/textPaginas"
        android:inputType="number"
        android:maxLength="6"
        android:padding="12dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etAutorLibroEdit"
        app:layout_constraintBottom_toTopOf="@+id/etUrlLibroEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPaginasLibroEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:fontFamily="@font/schoolbell"
        android:hint="@string/textAutor"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:padding="12dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etUrlLibroEdit"
        app:layout_constraintBottom_toTopOf="@+id/btVolverEditLibroFrag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAutorLibroEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:fontFamily="@font/schoolbell"
        android:hint="@string/textUrl"
        android:inputType="textPersonName"
        android:maxLength="200"
        android:padding="12dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btBorrarLibro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btEditLibro2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/schoolbell"
        android:text="@string/textBorrar"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        app:layout_constraintBottom_toTopOf="@+id/etTituloLibroEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/schoolbell"
        android:text="@string/textEditaBorraLibro"
        android:textAlignment="center"
        android:textColor="#472C06"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAlertaEditLibro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/schoolbell"
        android:textAlignment="center"
        android:textColor="#f00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>